# winh

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: audio.rs  auto_input.rs  config.rs  eliza.rs  main.rs  openai.rs  speech_to_text.rs  text_to_speech.rs  vrchat.rs
