[package]
name = "winh"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["cympfh"]
description = "Windows 11 voice transcription GUI application"
repository = "https://github.com/cympfh/winh"

[dependencies]
eframe = "0.29"
egui = "0.29"
cpal = "0.15"
hound = "3.5"
tempfile = "3.8"
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
dirs = "5.0"
arboard = "3.3"
image = { version = "0.24", default-features = false, features = ["png"] }
global-hotkey = "0.6"

[build-dependencies]
winres = "0.1"
